@@ -56,6 +56,7 @@
 		<module>ontopia-jdbcspy7</module>
 		<module>ontopia-lucene</module>
 		<module>ontopia-rest</module>
+		<module>ontopia-deprecated-utils</module>
 		
 		<!-- Web Apps -->
 		<module>webapp-root</module>
@@ -146,9 +147,9 @@
 				</plugin>
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.20.1</version>
+					<version>2.22.2</version>
 					<configuration>
-						<argLine>-Dontopia.jetty.port=${ontopia.jetty.port}</argLine>
+						<argLine>-Dontopia.jetty.port=${ontopia.jetty.port} -Xmx1024m -XX:MaxPermSize=256m</argLine>
 						<includes>
 							<include>**/*Tests.java</include>
 							<include>**/*Test.java</include>
@@ -467,7 +468,7 @@
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
-				<version>1.7.25</version>
+				<version>1.7.36</version>
 			</dependency>
 			<dependency>
 				<groupId>antlr</groupId>
@@ -625,8 +626,8 @@
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
-				<version>1.7.25</version>
+				<artifactId>slf4j-reload4j</artifactId>
+				<version>1.7.36</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
